<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view= "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="yvqs.app.novatek.com.yvosquesabes.ExamenActivity"
    android:background="@drawable/fondo2">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewPrueba"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="@dimen/activity_horizontal_margin"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardCornerRadius="15dp"
        >

        <RelativeLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/header"
                android:scaleType="centerCrop"
                android:id="@+id/imageView"
                android:contentDescription="@string/label_de_categoria" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/cali"
                android:textColor="@android:color/holo_green_dark"
                android:gravity="center"
                android:textSize="48sp"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignParentStart="true"
            />

            <TextView
                android:id="@+id/pregunta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aqui_es_donde_iran_las_preguntas"
                android:textSize="20sp"
                android:textColor="@color/secondary_text"
                android:textAlignment="center"
                android:paddingTop="7dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true"
            />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta_1"
        android:textSize="20sp"
        android:layout_below="@id/cardViewPrueba"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        style="@style/btnStyleOpcion"/>

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta_2"
        android:textSize="20sp"
        android:layout_below="@+id/btn1"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerHorizontal="true"
        style="@style/btnStyleOpcion"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta_3"
        android:textSize="20sp"
        android:id="@+id/btn3"
        android:layout_below="@+id/btn2"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerHorizontal="true"
        style="@style/btnStyleOpcion"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/respuesta_4"
        android:textSize="20sp"
        android:id="@+id/btn4"
        android:layout_below="@+id/btn3"
        android:layout_marginTop="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_centerHorizontal="true"
        style="@style/btnStyleOpcion"/>

    <TextView
        android:id="@+id/txtAcertadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn4"
        android:layout_marginTop="5dp"
        android:text="@string/r_acertadas_0"
        style="@style/btnStyleAzul"
    />

    <TextView
        android:id="@+id/txtCalificacion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn4"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:text="@string/puntos_0"
        style="@style/btnStyleAzul"
        />
</RelativeLayout>
